--- a/hotel.html
+++ b/hotel.html
@@ -175,9 +175,7 @@
     <!-- /Header -->
 
     <!-- Navbar -->
-    <nav
-      class="navbar navbar-expand-lg bg-primary ms-auto sticky-top container-fluid mb-4"
-    >
+    <nav class="navbar navbar-expand-lg bg-primary ms-auto sticky-top mb-4">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">MujHotel</a>
         <button
@@ -189,11 +187,9 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="mainNav">
-          <ul class="navbar-nav">
+          <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" href="#" data-target="nav-collapse"
-                >Domu</a
-              >
+              <a class="nav-link active" href="#">Domu</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#history">Historie</a>
