primary color edit + heading h1

--- a/hotel.html
+++ b/hotel.html
@@ -27,8 +27,8 @@
     <!-- Header -->
     <section id="home">
       <div class="container pt-4">
-        <h1 class="h1">Muj hotel</h1>
-        <h2 class="h2">Zarezervujte ihned!</h2>
+        <h1 class="display-1">Island Resort Maldives</h1>
+        <h2 class="display-4">Zarezervujte ihned!</h2>
         <!-- Formular -->
         <form>
           <div class="row my-2">
